<resources>
    <string name="app_name">Health App</string>
    //For Main Menu
    <string name="TxtMain">Welcome to Health System</string>
    <string name="txtTitle">Are you signing in as?</string>
    <string name="rbtAdmin">Admin</string>
    <string name="rbtPatient">Patient</string>
    <string name="rbtDoctor">Doctor</string>
    <string name="rbtCashier">Cashier</string>
    <string name="btnLogIn">Log In</string>

    // for Admin
    <string name="UserName">User Name</string>
    <string name="Title">Title</string>
    <string name="UserID">User ID</string>
    <string name="Password">Password</string>
    <string name="ViewAll">View All</string>
    <string name="Add">Add</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>

    // for Admin update

    <string name="UserIDUpdate">Enter User ID</string>
    <string name="UpdatePassword">Enter Your New Password</string>
    <string name="btnApply">Apply</string>
    <string name="btnHome">Home</string>

    //For doctor
    <string name="DocName">Doctor Full Name</string>
    <string name="DocTitle"> Title</string>
    <string name="DocDOB">D.O.B</string>
    <string name="Shift">Shift</string>
    <string name="Update">Update</string>
    <string name="View">InFo</string>
    <string name="HomePage">Home</string>
    <string name="Patient">Patient Check</string>
    <string name="DocID">Your ID</string>
    <string name="test">TODO</string>

    //for Doctor Update Activity
    <string name="btnUpdate">Update</string>
    <string name="btnUpdateNew">Update</string>
    <string name="btnView">View</string>
    <string name="hint1">Your ID</string>
    <string name="hint2">New Shift</string>
    <string name="txtDate">D.O.B</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>